[package]
name = "total5"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the Total.js v5 web framework"
license = "MIT"

[dependencies]
regex = "1.10.2"
once_cell = "1.18.0"
tokio = { version = "1.34.0", features = ["full"] }
chrono = "0.4.31"
chrono-tz = "0.10.3"
serde_json = "1.0.140"
